sshme-in/storage/influxv2/route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: influxv2-route
spec:
  parentRefs:
    - name: default-gateway
      namespace: istio-ingress
  hostnames:
    - influxv2.sshme.in
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: influxv2-influxdb
          port: 8086
